# azure_ml_app

./: Dockerfile  Dockerfile.txt  README.md  buildpush.sh  deployment-logs.txt  devpull.sh  docker-compose.yml  pyproject.toml  run.sh
.k8s/base/: deployment-lab4.yaml  deployment-lab4_copy.yaml  kustomization.yaml
.k8s/dev/: kustomization.yaml  namespace.yaml
.k8s/prod/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml
infra/: config_map.yaml  deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
src/: main.py  model_pipeline.pkl
tests/: test_hello.py  test_lab4.py
